could not fix bottom of footer space on mobile.

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -13,7 +13,6 @@
 @media only screen and (max-width : 991.98px) {
     .footer {
         font-size: 12px;
-        margin-bottom: -100px;
     }
 }
 
